--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
  "devDependencies": {
   "@babel/core": "^7.5.5",
   "@zeit/next-css": "^1.0.1",
-  "babel-eslint": "^10.0.2",
+  "babel-eslint": "^10.0.3",
   "babel-plugin-styled-components": "^1.10.6",
   "eslint-config-xo-react": "^0.20.0",
   "eslint-plugin-react": "^7.14.3",
@@ -34,7 +34,6 @@
   "prop-types": "^15.7.2",
   "react": "^16.9.0",
   "react-dom": "^16.9.0",
-  "react-simple-img": "^2.3.3",
   "styled-components": "^4.3.2",
   "styled-components-breakpoint": "^2.1.1"
  },
@@ -52,7 +51,8 @@
    }
   },
   "rules": {
-   "import/no-unassigned-import": "off"
+   "import/no-unassigned-import": "off",
+   "react/boolean-prop-naming": "off"
   }
  }
 }
